--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -51,21 +51,21 @@
 
               
 
-              <div class="offcanvas offcanvas-start" data-bs-backdrop="static" tabindex="-1" id="staticBackdrop" aria-labelledby="staticBackdropLabel" style="overflow: visible;">
+              <div class="offcanvas offcanvas-start bg-dark" data-bs-backdrop="static" tabindex="-1" id="staticBackdrop" aria-labelledby="staticBackdropLabel" style="overflow: visible;">
                 <div class="offcanvas-header">
-                  <h5 class="offcanvas-title" id="staticBackdropLabel">Hello <span class="userName capitalizeFirst"></span> !</h5>
+                  <h5 class="offcanvas-title text-center text-light" id="staticBackdropLabel">Hello <span class="userName capitalizeFirst"></span> !</h5>
                   <button type="button" class="btn-close" id="closeButton" data-bs-dismiss="offcanvas" aria-label="Close" style="font-size: 30px; margin: 10px;"></button>
                 </div>
                 <div class="offcanvas-body">
                   <div class="d-flex" style="flex-direction: column; justify-content: center; row-gap: 10px;">
                   <div>
-                    <a type="button" href="/user/profile" class="py-3 btn btn-dark d-flex justify-content-center" style=" text-decoration: none; align-items: center;"><i class="fa-regular fa-user me-3" style="font-size: 30px;"></i>PROFILE</a>
+                    <a type="button" href="/user/profile" class="openButton py-3 btn btn-dark d-flex justify-content-center" style=" text-decoration: none; align-items: center;"><i class="fa-regular fa-user me-3" style="font-size: 30px;"></i>PROFILE</a>
                   </div>
                   <div>
-                    <a type="button" href="/user/orders" class="py-3 btn btn-dark d-flex justify-content-center" style=" text-decoration: none; align-items: center;"><i class="fa-solid fa-truck-fast me-3" style="font-size: 30px;"></i>ORDERS</a>
+                    <a type="button" href="/user/orders" class="openButton py-3 btn btn-dark d-flex justify-content-center" style=" text-decoration: none; align-items: center;"><i class="fa-solid fa-truck-fast me-3" style="font-size: 30px;"></i>ORDERS</a>
                   </div>
                 <div class="btn-group dropdown">
-                <button type="button" class="py-3 btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                <button type="button" class="openButton py-3 btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                     BRANDS
                 </button>
                 <ul class="dropdown-menu bg-dark text-center p-4 " style="box-shadow: 4px 4px 8px rgba(255, 255, 255, 0.913);">
