--- a/public/css/adminHome.css
+++ b/public/css/adminHome.css
@@ -8,6 +8,11 @@
     border-radius: 10px;
     padding: 20px;
 }
+
+/* body {
+    background: linear-gradient(to bottom, #a8c0ff, #3f2b96);
+} */
+
 .tableHead{
     background-color: black;
     color: white;
