--- a/views/admin/adminHome.ejs
+++ b/views/admin/adminHome.ejs
@@ -6,7 +6,6 @@
     <%- include('../layout/adminHeader')-%>
 
         <div class="container" style="margin-top: 20px; margin-bottom: 200px;"> 
-            <h2 class="" style=" font-family: 'Michroma', sans-serif;">Hi Admin!</h2>
 <div class="container-fluid adminContainer">
             <div class="row g-5"> 
                 <div class="adminCenter col-12 col-xxl-2 col-xl-2 col-md-12 col-lg-2 col-sm-12">
@@ -24,7 +23,7 @@
             </div>
         </div>
       <div class="container mt-5 border rounded p-4">
-            <h2 style="font-family: 'Michroma', sans-serif;">Products</h2>
+            <h2 style="font-family: 'Michroma', sans-serif;">All Products</h2>
             
             <div class="d-flex justify-content-center text-center mt-2"> 
               <form action="/admin/searchProduct" class="needs-validation" method="get" class=" w-50 mt-2 mb-3" enctype="application/form-data">
@@ -54,8 +53,10 @@
               <% products.forEach(product=>{%>
    
                 <div class="col">
-                  <div class="card h-100">
-                    <img src="../../public/productImages/<%= product.images[0]%>" class="card-img-top" alt="...">
+                  <div class="card h-100" style="border: 1px solid rgba(51, 51, 51, 0.567); border-radius: 20px; box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.608); ">
+                  <a href="/admin/productDetailed?id=<%=product._id%>" style="padding-right: 10px; margin: 0px;">
+                    <img src="../../public/productImages/<%= product.images[0] %>" class="image-fluid" alt="..." style="border-radius: 20px; margin: 5px; max-width: 100%; height: auto; object-fit: contain;">
+                   </a> 
                     <div class="card-body">
                       <span class="card-title d-block"><span style="font-size: 17px; font-weight: 700;">Name : </span><%= product.name%></span>
                       <span class="card-title d-block"><span style="font-size: 17px; font-weight: 700;">Quantity : </span><%= product.quantity%></span>
@@ -67,13 +68,9 @@
                       <span class="card-title d-block text-center mt-2"><span style="font-size: 17px; font-weight: 700;"><u>Description</u></span></span>
                       <p class="card-text ps-2 pe-2 pb-2"><%= product.description%></p>
                     </div>
-                    <div class="card-footer">
-                        <a href="/admin/editProduct?id=<%=product._id%>" class="btn btn-dark">Edit</a>
-                        <a href="/admin/deleteProduct?id=<%=product._id%>" class="btn btn-danger" id="button" onclick="handleButtonClick()" ><%=product.deleted?"Show":"Hide"; %></a>
-                      
-
-
-
+                    <div class="card-footer d-flex" style="justify-content: end; gap: 10px; background-color: #ebebebc0; border-bottom-left-radius: 20px; border-bottom-right-radius: 20px;">
+                        <a href="/admin/editProduct?id=<%=product._id%>" class="btn btn-dark rounded-pill px-3"><i class="fa-solid fa-pencil"></i></a>
+                        <a href="/admin/deleteProduct?id=<%=product._id%>" class="btn btn-warning rounded-pill px-3" id="button" onclick="handleButtonClick()" ><%=product.deleted?"Show":"Hide"; %></a>
                       </div>
                     </div>
                   </div>
