--- a/views/admin/adminUserManagement.ejs
+++ b/views/admin/adminUserManagement.ejs
@@ -6,7 +6,6 @@
     <%- include('../layout/adminHeader')-%>
 
 <div class="container" style="margin-top: 20px; margin-bottom: 200px;"> 
-    <h2 class="" style=" font-family: 'Michroma', sans-serif;">Hi Admin!</h2>
         <div class="container-fluid adminContainer">
             <div class="row g-5"> 
                 <div class="adminCenter col-12 col-xxl-2 col-xl-2 col-md-12 col-lg-2 col-sm-12">
@@ -18,7 +17,7 @@
 
 
 
-        <div class="container mt-5 border rounded p-4">
+        <div class="container mt-5 p-4" style=" border: 1px solid rgb(124, 124, 124); border-radius: 20px; padding: 20px; background-color: rgba(255, 255, 255, 0.635);">
             <h2 style="font-family: 'Michroma', sans-serif;">Users</h2>
 
               <div class="d-flex justify-content-center text-center mt-2"> 
@@ -49,17 +48,17 @@
               <% users.forEach(user=>{%>
    
                 <div class="col">
-                  <div class="card h-100">
-                    <i class="bi bi-person-vcard-fill card-image-top text-center" style="font-size: 100px;"></i>
+                  <div class="card h-100" style="background-color: #ecd7ff; border: 1px solid rgb(209, 156, 232); border-radius: 10px;  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.538); padding: 20px;">
+                    <i class="fa-regular text-center fa-circle-user" style="font-size: 60px;"></i>
                     <div class="card-body">
                       <span class="card-title d-block"><span style="font-size: 17px; font-weight: 700;">Name : </span><%= user.name%></span>
                       <span class="card-title d-block"><span style="font-size: 17px; font-weight: 700;">Email : </span><%= user.email%></span>
                       <span class="card-title d-block"><span style="font-size: 17px; font-weight: 700;">Contact : </span><%= user.contact%></span>
                     </div>
-                    <div class="card-footer d-flex align-item-center justify-content-center">
-                        <a href="/admin/editUser?id=<%=user._id%>" class="btn btn-dark">Edit</a>
-                        <a href="/admin/deleteUser?id=<%=user._id%>" class="btn btn-danger ms-3 me-3"  id="button" onclick="handleButtonClick()" >Delete</a>
-                        <a href="/admin/blockUser?id=<%=user._id%>" class="btn btn-primary" id="button" onclick="handleButtonClick()" ><%=user.isBlocked?"Unblock":"Block"; %></a>
+                    <div class=" d-flex align-item-center justify-content-center">
+                        <a href="/admin/editUser?id=<%=user._id%>" class="btn btn-dark rounded-pill px-3"><i class="fa-solid fa-pencil "></i></a>
+                        <a href="/admin/deleteUser?id=<%=user._id%>" class="btn btn-danger ms-3 me-3 rounded-pill px-3"  id="button" onclick="handleButtonClick()" ><i class="fa-regular fa-trash-can "></i></a>
+                        <a href="/admin/blockUser?id=<%=user._id%>" class="btn btn-warning rounded-pill px-3" id="button" onclick="handleButtonClick()" ><%=user.isBlocked?"Unblock":"Block"; %></a>
                       </div>
                     </div>
                   </div>
