--- a/views/admin/brandBasedAdmin.ejs
+++ b/views/admin/brandBasedAdmin.ejs
@@ -5,9 +5,8 @@
 <body>
     <%- include('../layout/adminHeader')-%>
 
-        <div class="container" style="margin-top: 150px; margin-bottom: 200px;"> 
-            <h2 class="" style=" font-family: 'Michroma', sans-serif;">Hi Admin!</h2>
-<div class="container-fluid adminContainer">
+        <div class="container" style="margin-top: 50px; margin-bottom: 100px;"> 
+          <div class="container-fluid adminContainer">
             <div class="row g-5"> 
                 <div class="adminCenter col-12 col-xxl-2 col-xl-2 col-md-12 col-lg-2 col-sm-12">
                     <button class="btn btn-dark rounded">Total Brands : <%=brandsData?.length%></button>
@@ -48,7 +47,7 @@
     <% brandsData?.forEach(brand => { %>
                   <div class="col">
                     <div class="card h-100 mb-3 pb-2">
-                      <h2 class="card-title text-center"><%= brand._id %></h2>
+                      <h2 class="card-title text-center mt-3 mb-2" style="font-family: 'Michroma', sans-serif;"><%= brand._id %></h2>
               
                       
             <div class="row row-cols-1 row-cols-xl-3 row-cols-md-2 g-4  d-flex" style="justify-content: center;">
@@ -58,8 +57,10 @@
                 <% brand.products.forEach(product=>{%>
      
                   <div class="col">
-                    <div class="card h-100">
-                      <img src="../../public/productImages/<%= product.images[0]%>" class="card-img-top" alt="...">
+                    <div class="card h-100" style="border: 1px solid rgba(51, 51, 51, 0.567); border-radius: 20px; box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.608); ">
+                    <a href="/admin/productDetailed?id=<%=product._id%>" style="padding-right: 10px; margin: 0px;">
+                      <img src="../../public/productImages/<%= product.images[0] %>" class="image-fluid" alt="..." style="border-radius: 20px; margin: 5px; max-width: 100%; height: auto; object-fit: contain;">
+                     </a> 
                       <div class="card-body">
                         <span class="card-title d-block"><span style="font-size: 17px; font-weight: 700;">Name : </span><%= product.name%></span>
                         <span class="card-title d-block"><span style="font-size: 17px; font-weight: 700;">Quantity : </span><%= product.quantity%></span>
@@ -67,18 +68,16 @@
                         <span class="card-title d-block"><span style="font-size: 17px; font-weight: 700;">Price : </span><%= product.price%></span>
                         <span class="card-title d-block"><span style="font-size: 17px; font-weight: 700;">Sizes : </span><%= product.sizes%></span>
                         <span class="card-title d-block"><span style="font-size: 17px; font-weight: 700;">Brand : </span><%= product.brand%></span>
+                        <span class="card-title d-block"><span style="font-size: 17px; font-weight: 700;">Sales Count : </span><%= product.salesCount||0%></span>
                         <span class="card-title d-block text-center mt-2"><span style="font-size: 17px; font-weight: 700;"><u>Description</u></span></span>
                         <p class="card-text ps-2 pe-2 pb-2"><%= product.description%></p>
                       </div>
-                      <div class="card-footer">
-                          <a href="/admin/editProduct?id=<%=product._id%>" class="btn btn-dark">Edit</a>
-                          <a href="/admin/deleteProduct?id=<%=product._id%>" class="btn btn-danger ms-3"  id="button" onclick="handleButtonClick()" >Delete</a>
+                      <div class="card-footer d-flex" style="justify-content: end; gap: 10px; background-color: #ebebebc0; border-bottom-left-radius: 20px; border-bottom-right-radius: 20px;">
+                          <a href="/admin/editProduct?id=<%=product._id%>" class="btn btn-dark rounded-pill px-3"><i class="fa-solid fa-pencil"></i></a>
+                          <a href="/admin/deleteProduct?id=<%=product._id%>" class="btn btn-warning rounded-pill px-3" id="button" onclick="handleButtonClick()" ><%=product.deleted?"Show":"Hide"; %></a>
                         </div>
                       </div>
                     </div>
-                    
-                    
-                    
                     <%})%>
                 <% } else { %>
                   <h2 class="text-center">No Such Products</h2>
