--- a/views/admin/coupon.ejs
+++ b/views/admin/coupon.ejs
@@ -2,7 +2,7 @@
 <link rel="stylesheet" type="text/css" href="../../public/css/homePage.css">
 <link rel="stylesheet" type="text/css" href="../../public/css/profile.css">
 <style>
-    @media(min-width:768px){
+    @media(min-width:992px){
         .addCoupon{
             margin-left: 10px;
         }
@@ -12,72 +12,63 @@
 <body>
     <%- include('../layout/adminHeader') %>
 
-<main class="container mt-5 mb-4">
-    <section class="content-main">
-        <div class="content-header">
-            <div style="font-family: 'Michroma', sans-serif;">
-                <h2 class="content-title card-title mb-3">Coupons</h2>
-            </div>
-        </div>
-<!-- 
-        <form>
-            <div class="input-group mb-3">
-                <input list="search_terms" type="text" class="form-control" placeholder="Search term" name="search">
-                <button class="btn btn-primary" type="submit">Search</button>
-            </div>
-        </form> -->
-
-        <div class="card">
+<main class="container mt-5 mb-4 ">
+    <section class="">
+        <div class="card" style="border: 1px solid rgb(137, 137, 137); border-radius: 20px; box-shadow: 0px 0px 3px rgb(195, 0, 255); background-color: #ecd7ff;" >
             <div class="card-body">
                 <div class="row" >
-                    <div class="col-md-4 mb-3 addCoupon" style="background-color: rgb(249, 249, 249); border: 1px solid rgb(187, 187, 187); border-radius: 5px; padding: 15px 10px;">
-                        <h3 class="mb-4 text-center mb-3" style="font-family: 'Michroma', sans-serif;">Add Coupon</h3>
+                    <div class="col-lg-5 col-12 mb-3 addCoupon" style="background-color: #be6fff; border: 1px solid rgb(142, 142, 142); border-radius: 20px; padding:20px; color: white; height: min-content;">
+                        <h3 class="mb-4 text-center mb-3 text-dark" style="font-family: 'Michroma', sans-serif;">Add Coupon</h3>
                         <form class="row g-3 needs-validation" action="" method="get" novalidate enctype="application/form-data">
                             <div class="col-md-12">
                                 <label for="validationCustom01" class="form-label">Coupon Code :</label>
-                                <input type="text" class="form-control" id="validationCustom01" name="code" required>
+                                <input type="text" class="form-control rounded-pill" id="validationCustom01" name="code" required>
                                 <div class="valid-feedback">
                                     Looks good!
                                 </div>
                             </div>
                             <div class="col-md-12">
                                 <label for="validationCustom02" class="form-label">Discount % :</label>
-                                <input type="number" class="form-control" id="validationCustom02" name="discountPercentage"  required>
+                                <input type="number" class="form-control rounded-pill" id="validationCustom02" name="discountPercentage"  required>
                                 <div class="valid-feedback">
                                     Looks good!
                                 </div>
                             </div>
                             <div class="col-md-12">
                                 <label for="validationCustom02" class="form-label">Discount Expiry Date:</label>
-                                <input type="date" class="form-control" id="validationCustom02" name="discountExpiryDate" required>
+                                <input type="date" class="form-control rounded-pill" id="validationCustom02" name="discountExpiryDate" required>
                                 <div class="valid-feedback">
                                     Looks good!
                                 </div>
                             </div>
                             <div class="save">
                                 <div class="d-flex" style="justify-content: center;">
-                                    <button class="btn btn-dark rounded-pill px-4 py-2 mt-2" id="startCountdownButton" type="submit">Add</button>
+                                    <button class="btn btn-warning rounded-pill px-4  mt-2" id="startCountdownButton" type="submit">Add</button>
                                 </div>
                             </div>
                         </form>
                     </div>
 
                     <div class="col" style="display: flex; justify-content: center; align-items: center;">
-                        <div class="row g-3" style="display: flex; justify-content: center;">
+                        <div class="row g-1" style="display: flex; justify-content: center;">
+                            <div style="font-family: 'Michroma', sans-serif;">
+                                <h4 class="text-center mb-3">Coupons ( <%=coupons.length%> )</h4>
+                            </div>
                             <% if (locals.coupons && locals.coupons.length > 0) { %>
                               <% coupons.forEach(coupon => { %>
-                                <div class="col-12 col-md-3 col-lg-3 col-sm-6" style="min-width: 270px;">
-                                  <div class="card h-100">
-                                    <div class="card-body">
-                                      <span class="card-title d-block"><span style="font-size: 17px; font-weight: 700;">Name : </span><%= coupon.code %></span>
-                                      <span class="card-title d-block mt-2"><span style="font-size: 17px; font-weight: 700;">Discount : </span><%= coupon.discountPercentage %>%</span>
-                                      
+                                <div class="col-12 " style="margin-right: 32px;">
+                                    
+                                    <div class="w-100 p-3 m-3" style="display: flex; flex-wrap: wrap; justify-content: space-between; border: 1px solid rgb(189, 189, 189); border-radius: 20px; background-color: #ecd7ff; box-shadow: 0px 0px 3px violet;">
+                                        <div class="" style="font-family: 'Michroma', sans-serif;">
+                                            <span class="card-title d-block"><span style="font-size: 17px; font-weight: 700;">Name : </span><%= coupon.code %></span>
+                                            <span class="card-title d-block mt-2"><span style="font-size: 17px; font-weight: 700;">Discount : </span><%= coupon.discountPercentage %>%</span>
+                                        </div>
+                                        <div class="d-flex" style="justify-content: end; align-self: baseline;">
+                                            <a href="/admin/editCouponShow?id=<%= coupon._id %>" class="btn btn-success px-3 rounded-pill"><i class="fa-solid fa-pencil"></i></a>
+                                            <a href="/admin/hideCoupon?id=<%= coupon._id %>" class="btn ms-2 btn-warning px-3 rounded-pill" id="button" onclick="handleButtonClick()"><%= coupon.isActive ? "Disable" : "Enable"; %></a>
+                                        </div>
                                     </div>
-                                    <div class="card-footer " style="display: flex; justify-content: center; gap: 5px;">
-                                      <a href="/admin/editCouponShow?id=<%= coupon._id %>" class="btn btn-outline-success">Edit</a>
-                                      <a href="/admin/hideCoupon?id=<%= coupon._id %>" class="btn btn-outline-danger" id="button" onclick="handleButtonClick()"><%= coupon.isActive ? "Disable" : "Enable"; %></a>
-                                    </div>
-                                  </div>
+                                    
                                 </div>
                               <% }) %>
                             <% } else { %>
