--- a/views/admin/editCategory.ejs
+++ b/views/admin/editCategory.ejs
@@ -20,29 +20,34 @@
         </header>
         <section class="content-main">
             <div class="content-header">
-                <div>
-                    <h2 class="content-title card-title">Categories </h2>
-                    <p>Edit category</p>
-                </div>
+              
            
             </div>
-            <div class="container" style="display: flex; justify-content: center;">
-            <div class="card w-50">
+           
+            <div class="card p-2 mt-4" style="background-color:  #be6fff; border-radius: 20px; border: 1px solid rgb(40, 40, 40); ">
                 <div class="card-body">
                     <div class="row">
                         <div class="col-md-12 ">
+                    <h3 class="text-center"  style="font-family: 'Michroma', sans-serif;">Edit Category </h2>
+
                             <form action="/admin/editCategory?id=<%=categories._id%>" class="needs-validation" method="post">
-                                <a href="/admin/deleteCategoryCompletely?id=<%=categories._id%>" class="btn btn-danger mb-3"  id="button" >Delete</a>
-                                <div class="mb-4">
-                                    <label for="product_name" class="form-label">Name</label>
-                                    <input name="name" type="text" placeholder="Type here" class="form-control" value="<%=categories.name%>" id="product_name" /><span class="error-span text-danger">&nbsp;</span>
+                                <div class="d-flex justify-content-end">
+                                    <a href="/admin/deleteCategoryCompletely?id=<%=categories._id%>" class="btn btn-danger mb-3"  id="button" ><i class="fa-regular fa-trash-can fs-4"></i></a>
+                                </div>
+                                <div class="">
+                                    <label for="product_name" class="form-label"  style="font-family: 'Michroma', sans-serif;">Name</label>
+                                    <input name="name" type="text" placeholder="Type here" class="form-control rounded-pill"  value="<%=categories.name%>" id="product_name" /><span class="error-span text-danger">&nbsp;</span>
+                                </div>
+                                <div class="">
+                                    <label for="discountPercentage" class="form-label"  style="font-family: 'Michroma', sans-serif;">Discount</label>
+                                    <input name="discountPercentage" type="number" placeholder="Type here" class="form-control rounded-pill"  value="<%=categories.discountPercentage%>" id="discountPercentage" />
                                 </div>
                                 <div class="mb-4">
-                                    <label class="form-label">Description</label>
+                                    <label class="form-label"  style="font-family: 'Michroma', sans-serif;">Description</label>
                                     <input name="description" type="text" placeholder="Type here" class="form-control"  value="<%=categories.description%>" ></input>
                                 </div>
-                                <div class="d-grid">
-                                    <button class="btn btn-success">Save</button>
+                                <div class="d-flex justify-content-center" >
+                                    <button class="btn btn-dark rounded-pill px-5">Save</button>
                                     
                                 </div>
                             </form>
@@ -100,26 +105,34 @@
         const categoryNameInput = document.getElementById("product_name");
         const categoryName = categoryNameInput.value;
         const category = categoryName.trim();
-
+        const discountPercentageInput = document.getElementById("discountPercentage");
+        const discountPercentage = discountPercentageInput.value;
+        const dis = discountPercentage.trim();
+        const discount=parseInt(dis);
+        console.log(discount)
+        const id="<%=categories._id%>"
         // Your form validation conditions
         if (/^\s*$/.test(categoryName)) {
             document.querySelector(".error-span").textContent = 'Category name cannot be just spaces.';
             categoryNameInput.focus();
             return;
         }
-
+        if (/^\s*$/.test(discount) || isNaN(discount) || discount > 80 || discount < 0) {
+            showAlert('Enter a valid discount percentage between 0 and 80.');
+            return;
+        }
         // Add additional form validation conditions as needed
 
-        fetch('/admin/checkCategory?id=' + category)
+        fetch('/admin/checkCategory?name=' + category+"&id=" +id)
             .then(response => response.json())
             .then(data => {
                 if (data.exists) {
                     document.querySelector(".error-span").textContent = "Category name already exists";
                     categoryNameInput.focus();
                 } else {
-                    document.querySelector(".error-span").textContent = "";
-                    // If the category does not exist and form is valid, submit the form to the backend
+                    document.querySelector(".error-span").innerHTML = '&nbsp;';
                     if (form.checkValidity()) {
+                        showSuccess("Updating")
                         event.target.submit();
                     }
                 }
