--- a/views/admin/editProduct.ejs
+++ b/views/admin/editProduct.ejs
@@ -4,7 +4,7 @@
 </head>
 <body>
     <div class="backButton">
-        <a href="/admin/home">
+        <a href="/admin/productList">
             <button class="btn btn-dark">Back</button>
         </a>
     </div>
@@ -52,6 +52,10 @@
             <div class="form-group">
                 <label for="price">Price:</label> <br>
                 <input class="inputField" type="number" class="form-control" id="price" name="price" value="<%=product.price%>"  required>
+            </div>
+            <div class="form-group">
+                <label for="price">Discount % :</label> <br>
+                <input class="inputField" type="number" class="form-control" id="discountPercentage" name="discountPercentage" value="<%=product.discountPercentage-discountPercentage%>"  required>
             </div>
 
 
