--- a/views/user/addAddress.ejs
+++ b/views/user/addAddress.ejs
@@ -8,7 +8,7 @@
 
     <div class="container mt-5 mb-5" style="display: flex; justify-content: center;">
         <div class="mainCont" style="max-width: 700px; border: 1px solid black; border-radius: 20px; padding: 20px;"><h3 class="mb-4 text-center mb-3" style="font-family: 'Michroma', sans-serif;">Add Address</h3>
-            <form class="row g-3 needs-validation" action="/user/redirect/" method="get" novalidate enctype="application/form-data" onsubmit="return validateForm()">
+            <form class="row g-3 needs-validation" action="/user/redirect/" method="get" novalidate enctype="application/form-data">
                 <div class="form-group col-md-12">
                     <label for="countrySelect">Select Country:</label>
                     <select class="form-control" id="countrySelect" required onchange="updateStates()">
