--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -34,7 +34,11 @@
                             <a href="/user/productDetailed?id=<%=product?._id%>" style="text-decoration: none; color: black;">
                             <h4 class="card-title mb-1 mt-1 text-center" style="font-family: 'Michroma', sans-serif;"><u><%= product?.name %></u></h4></a>
                             <div class="d-flex align-item-center ms-3 me-3 mt-5" style="flex-wrap: wrap; justify-content: space-between;">
-                                <a class="btn btn-dark rounded-pill text-center text-danger ps-4 pe-4 pt-2" style="font-size: 30px; letter-spacing: 2px;">&#x20B9 <%= product?.price %>.00</a>
+                                <a class="btn btn-dark rounded-pill text-center text-danger ps-4 pe-4 pt-2" style="font-size: 30px; letter-spacing: 2px;">&#x20B9 <%if(product?.discountPercentage&&product?.discountPercentage>0){%>
+                                    <%= (product.price-((product?.price*product?.discountPercentage)/100)).toFixed(2)%>
+                                <%}else {%>
+                                    <%= (product?.price).toFixed(2)%>
+                                <%}%></a>
                             
                                 <div class="d-flex pe-1 " style="justify-content: flex-end; margin-top: 10px;">
                                     <a href="" id="<%=_id%>" class="removeFromCart btn btn-dark rounded-pill  d-flex justify-content-center pt-2 pb-2 ">
@@ -73,7 +77,12 @@
                                 </div>
 
                                     <% if (product?.deleted===false && product?.quantity>0) { %>
-                                        <a class="subTotal btn btn-dark d-flex justify-content-center mt-4 pt-1 pb-1 mb-2" ><h4 style=" font-family: 'Michroma', sans-serif;"><span>Sub Total : </span><span class="">&#x20B9</span><span class="" id="<%=_id%>subTotal"> <%=product.price*quantity%></span><span>.00</span></h3></a> 
+                                        <a class="subTotal btn btn-dark d-flex justify-content-center mt-4 pt-1 pb-1 mb-2" ><h4 style=" font-family: 'Michroma', sans-serif;"><span>Sub Total : </span><span class="">&#x20B9</span><span class="" id="<%=_id%>subTotal"> <%if(product?.discountPercentage&&product?.discountPercentage>0){%>
+                                            <%=(product.price-((product.price*product.discountPercentage)/100))*quantity%>
+                                            <%}else{%>
+                                                <%=product.price*quantity%>
+                                                <%}%>
+                                        </span><span></span></h3></a> 
                                     <% } else { %>
                                         <a class="text-danger btn btn-dark d-flex justify-content-center mt-4 pt-1 pb-1 mb-2" ><h3 style=" font-family: 'Michroma', sans-serif;">Not Available!</h3></a>
                                     <% } %>
@@ -94,7 +103,7 @@
             <% if(locals.products.length!==0 ) { %>
                 <div class="container d-flex justify-content-center">
                     <a href="/user/checkOut/" class="btn btn-dark d-flex flex-column justify-content-center mt-4 pt-3 pb-3 ps-4 pe-4" style="width: fit-content;">
-                        <h3 style="font-family: 'Michroma', sans-serif; margin-bottom: 5px;">Total : <span class="text-danger"> &#x20B9 </span><span  class="totalPrice" style="color: red; letter-spacing: 2px;"><%=locals?.total%></span><span style="color: red; letter-spacing: 2px;">.00</span></h3>
+                        <h3 style="font-family: 'Michroma', sans-serif; margin-bottom: 5px;">Total : <span class="text-danger"> &#x20B9 </span><span  class="totalPrice" style="color: red; letter-spacing: 2px;"><%=locals?.total%></span><span style="color: red; letter-spacing: 2px;">&nbsp;</span></h3>
                         <h4 style="font-family: 'Michroma', sans-serif; margin: 0; border-top: 4px dashed rgb(205, 205, 205);">Check Out Now</h4>
                     </a>
             </div>
