--- a/views/user/detailedProduct.ejs
+++ b/views/user/detailedProduct.ejs
@@ -35,14 +35,11 @@
     <div class="container" style="margin-top: 20px;">
         <div class="row" style="border: 1px solid black; border-radius: 20px; ">
             <div class="col-12 col-xl-7 col-lg-12 p-2 d-flex align-items-center">
-                <div class="row g-2">
+                <div class="row g-2 w-100">
                     <% if (product?.images && product?.images.length === 1) { %>
                         <div class="col-12">
                             <div class="card position-relative">
                                 <img src="../../public/productImages/<%= product.images[0] %>" class="card-img-top" alt="..." style="width: 100%; height: auto;">
-                                <div class="overlay">
-                                    <i class="fa-solid fa-search-plus"></i>
-                                </div>
                             </div>
                         </div>
                         
@@ -79,9 +76,14 @@
             </div>
         </div>
             <div class="col-12 col-xl-5 col-lg-12 pt-3 pb-2 ps-4 pe-2 " style="background-color: #D9D9D9; border-radius: 20px;" >
-                <h3 class="card-title mb-2 mt-2 text-center" style=" font-family: 'Michroma', sans-serif;"><u><%= product?.name%></u></h3>
+                <h3 class="card-title  mt-2 text-center" style=" font-family: 'Michroma', sans-serif;"><u><%= product?.name%></u></h3>
+                
                 <div class="d-flex align-item-center mt-5">
-                <a class="btn btn-dark rounded-pill text-center text-danger ps-4 pe-4" style="font-size: 30px; letter-spacing: 2px;">&#x20B9 <%= product?.price%>.00
+                <a class="btn btn-dark rounded-pill text-center text-danger ps-4 pe-4" style="font-size: 30px; letter-spacing: 2px;">&#x20B9 <%if(product?.discountPercentage&&product?.discountPercentage>0){%>
+                        <%= (product.price-((product?.price*product?.discountPercentage)/100)).toFixed(2)%>
+                    <%}else {%>
+                        <%= product?.price%>.00
+                    <%}%>
                 </a>
                 <a id="addToWishlist" style="color: rgb(0, 0, 0); text-decoration: none;">
                     <% if (wishlist) { %>
@@ -91,7 +93,29 @@
                     <% } %>
                 </a>
             </div>
-            <div class="container mt-4 ">
+            <%if(product?.discountPercentage&&product?.discountPercentage>0){%>
+                <div class="ms-2 d-flex text-danger" style="font-size: 14px; font-family: 'Michroma', sans-serif;">
+                    <span>Discount : - <%=product.discountPercentage%> %</span>  
+                  </div>
+                <div class="ms-2 d-flex" style="font-size: 13px; font-family: 'Michroma', sans-serif;">
+                    <span>M.R.P : &#x20B9 <strike><%=product?.price%></strike></span>  
+                  </div>
+            <%}%>
+            
+            <div class="px-2 " style="display: inline-block; margin-top: 6px; border: 1px solid rgb(215, 215, 215); border-radius: 30px; background-color: #ffffffc1; font-family: 'Michroma', sans-serif; padding-bottom: 5px;">
+                <% const rating = averageRating; %>
+                <span style="font-size: 10px;"><%=rating%> / 5</span>
+    
+                <% for (let i = 0; i < 5; i++) { %>
+                <% if (i < rating) { %>
+                    <i class="fa-solid fa-star fs-6" style="color: gold;"></i>
+                <% } else { %>
+                    <i class="fa-regular fa-star fs-6" style="color: rgba(255, 217, 0, 0.787);"></i>
+                <% } %>
+                <% } %>
+                <span style="font-size: 10px;">  <%=product.reviews.length%> ratings</span>
+            </div>
+            <div class="container ">
                 <div class="sizeChart d-flex justify-content-end align-items-baseline">
                     <div id="selectedSizes" class="me-auto" style="font-family: 'Michroma', sans-serif;"></div>
                     <span class="me-2" style="font-size: 20px;"><u>Size Chart</u></span>
@@ -117,7 +141,7 @@
                 <%} %>
 
 
-                <h3 class="mt-4" style="font-family: 'Michroma', sans-serif; "><u>About Product</u></h3>
+                <h3 class="mt-3" style="font-family: 'Michroma', sans-serif; "><u>About Product</u></h3>
                 <p class="" style="font-family: 'Michroma', sans-serif; font-size: 16px;" ><%=product?.description%></p>
                 <p class="" style="font-family: 'Michroma', sans-serif; font-size: 20px;" ><span class="fs-4">Category : </span><%=product?.category?.name%></p>
                 <p class="" style="font-family: 'Michroma', sans-serif; font-size: 20px;" ><span class="fs-4">Brand : </span><%=product?.brand%></p>
@@ -158,85 +182,9 @@
     </div>
 
 
-    <div class="container mt-5" style="border: 1px solid rgb(57, 57, 57) !important; border-radius: 5px; padding: 20px; font-family: 'Michroma', sans-serif; ">
-        <!-- Product Card -->
-        <div class="product-card" style="border: 1px solid rgb(68, 67, 67); background-color: rgba(255, 255, 255, 0.804);">
-            <div class="product-info">
-                <h5><i class="fa-regular fa-circle-user fs-1 me-2"></i> Ajmal</h5>
-                <p><b>Posted On : </b> October 20, 2023</p>
-                <p style="margin-top: -10px;"><b>Review : </b> A fantastic product with great features! Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique neque consectetur hic numquam dicta eligendi molestias eum vitae, accusamus ipsum consequuntur repellat quisquam illum error distinctio ullam natus ducimus harum.</p>
-            </div>
-            <div style="min-width: 240px; margin-left: 20px;">
-                <% const rating = 3; %>
-
-                <% for (let i = 0; i < 5; i++) { %>
-                <% if (i < rating) { %>
-                    <i class="fa-solid fa-star fs-3" style="color: gold;"></i>
-                <% } else { %>
-                    <i class="fa-regular fa-star fs-3" style="color: rgba(255, 217, 0, 0.787);"></i>
-                <% } %>
-                <% } %>
-
-            </div>
-        </div>
-        
     
-        <!-- Button to Open Review Modal -->
-        <button type="button" class="btn btn-dark rounded-pill px-3 py-2 mt-2" data-toggle="modal" data-target="#reviewModal">
-            Add Review
-        </button>
     
-        <!-- Review Modal -->
-        <div class="modal fade" id="reviewModal" tabindex="-1" role="dialog" aria-labelledby="reviewModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content" style="background-color: black; color: white;">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="returnModalLabel" style="font-family: 'Michroma', sans-serif;">Write Your Review!</h5>
-                        <button type="button" class="close btn" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true"><i class="bi bi-x-square-fill" style="font-size: 30px; color: white;"></i></span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <!-- Review Form -->
-                        <form>
-                            <div class="form-group">
-                                <label for="userReviewRating">Your Review Rating:</label>
-                                <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="userReviewRating" id="rating1" value="1" required>
-                                    <label class="form-check-label" for="rating1">1 (Poor)</label>
-                                </div>
-                                <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="userReviewRating" id="rating2" value="2" required>
-                                    <label class="form-check-label" for="rating2">2 (Fair)</label>
-                                </div>
-                                <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="userReviewRating" id="rating3" value="3" required>
-                                    <label class="form-check-label" for="rating3">3 (Average)</label>
-                                </div>
-                                <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="userReviewRating" id="rating4" value="4" required>
-                                    <label class="form-check-label" for="rating4">4 (Good)</label>
-                                </div>
-                                <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="userReviewRating" id="rating5" value="5" required>
-                                    <label class="form-check-label" for="rating5">5 (Excellent)</label>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="userReview">Your Review:</label>
-                                <textarea class="form-control" id="userReview" rows="3" required></textarea>
-                            </div>
-                           <div style="display: flex; ">
-                            <button type="submit" class="btn ms-auto btn-warning rounded-pill px-3 py-2 mt-2">Submit Review</button>
-                           </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
+    
 
     <div class="container Cont mt-5">
         <div class="responsive-container">
@@ -254,25 +202,177 @@
             </div>
         </div>
     </div>
+
+
 <div class="container" style="margin-top: 70px;">
     <h2 style="  font-family: 'Michroma', sans-serif;">You May Also Like </h2>
 </div>
+
+
 <div class="container productCont mt-3 mb-5">
         <div class="row row-cols-1 row-cols-lg-3 row-cols-md-2 g-4 d-flex mt-2 ms-3 me-3 mb-4 " style="justify-content: center;">
-            <% products?.forEach(productA=>{%>
-                <div class="col">
-                    <div class="card h-100">
-                        <a href="/user/productDetailed?id=<%=productA._id%>" style="text-decoration: none; color: black;">
-                        <img src="../../public/productImages/<%= productA.images[0]%>" class="card-img-top" alt="...">
-                        <div class="card-body d-flex justify-content-center" style="flex-direction: column; align-items: center; font-family: 'Michroma', sans-serif;">
-                            <h5 class="card-title mb-2"><%= productA.name%></h5>
-                        <a href="/user/productDetailed?id=<%= productA._id %>" class="btn btn-dark rounded-pill">&#x20B9 <%= productA.price%></a>
-                    </div></a>
+<%
+let counter = 0;
+products?.forEach(productA => {
+    if (counter >= 6 && counter <= 14) {
+%>
+<div class="col">
+    <div class="card h-100">
+        <a href="/user/productDetailed?id=<%=productA._id%>" style="text-decoration: none; color: black;">
+        <img src="../../public/productImages/<%= productA.images[0]%>" class="card-img-top" alt="..." style="position: relative;">
+        <%if(productA?.discountPercentage>0){%>
+            <span class="text-white" style="position: absolute; top: 10px; right: 10px; font-size: 15px; background-color:#CC0C39!important; border-radius: 10px; font-weight: bold; padding:8px ;"><%=productA.discountPercentage%>% off</span>
+            <%}%>
+        <div class="card-body d-flex justify-content-center" style="flex-direction: column; align-items: center; font-family: 'Michroma', sans-serif;">
+            <h5 class="card-title text-center mb-2"><%= productA.name%></h5>
+        <a href="/user/productDetailed?id=<%=productA._id%>" class="btn btn-dark mt-auto rounded-pill"><%if(productA?.discountPercentage&&productA?.discountPercentage>0){%>
+            <span class="text-danger"> &#x20B9 <%= (productA.price-((productA?.price*productA?.discountPercentage)/100)).toFixed(0)%></span>
+           
+        <%}else {%>
+            &#x20B9 <%= productA?.price%>
+        <%}%>
+        </a>
+    </div></a>
+</div>
+</div>
+<%
+    }
+    counter++;
+});
+%>
+</div>
+</div>
+
+
+
+
+<div class="container mt-3 mb-5" style="border: 1px solid rgb(57, 57, 57) !important; border-radius: 5px; padding: 20px; font-family: 'Michroma', sans-serif; ">
+    <%if(product.reviews&&product.reviews.length>0){%>
+        <%product.reviews.forEach(review=>{%>
+            <div class="product-card" style="border: 1px solid rgb(68, 67, 67); background-color: rgba(255, 255, 255, 0.804);">
+                <div class="product-info">
+                    <h5><i class="fa-regular fa-circle-user fs-1 me-2"></i> <%=review.userName.toUpperCase()%></h5>
+                    <p><b>Posted On : </b><%=moment(review.postedOn).format('YYYY-MM-DD')%></p>
+                    <p style="margin-top: -10px;"><b>Review : </b><%=review.review%></p>
+                </div>
+                <div style="min-width: 240px; margin-left: 20px;">
+                    <% const rating = review.rating; %>
+    
+                    <% for (let i = 0; i < 5; i++) { %>
+                    <% if (i < rating) { %>
+                        <i class="fa-solid fa-star fs-3" style="color: gold;"></i>
+                    <% } else { %>
+                        <i class="fa-regular fa-star fs-3" style="color: rgba(255, 217, 0, 0.787);"></i>
+                    <% } %>
+                    <% } %>
+    
                 </div>
             </div>
-    <%})%>
+            <%})%>
+        <%} else {%>
+            <div class="product-card" style="border: 1px solid rgb(68, 67, 67); background-color: rgba(255, 255, 255, 0.804);">
+                <div class="product-info">
+                    <h3 class="text-center">No review's</h5>
+            </div>
+            <%}%>
+
+    <!-- Button to Open Review Modal -->
+    <button type="button" class="btn btn-dark rounded-pill px-3 py-2 mt-2" data-toggle="modal" data-target="#reviewModal">
+        Add Review
+    </button>
+
+    <!-- Review Modal -->
+    <div class="modal fade" id="reviewModal" tabindex="-1" role="dialog" aria-labelledby="reviewModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content" style="background-color: black; color: white;">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="returnModalLabel" style="font-family: 'Michroma', sans-serif;">Write Your Review!</h5>
+                    <button type="button" class="close btn" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true"><i class="bi bi-x-square-fill" style="font-size: 30px; color: white;"></i></span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <!-- Review Form -->
+                    <form id="reviewForm">
+                        <div class="form-group">
+                            <label for="userReviewRating">Your Review Rating:</label>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="userReviewRating" id="rating1" value="1" required>
+                                <label class="form-check-label" for="1">1 (Poor)</label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="userReviewRating" id="rating2" value="2" required>
+                                <label class="form-check-label" for="2">2 (Fair)</label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="userReviewRating" id="rating3" value="3" required>
+                                <label class="form-check-label" for="3">3 (Average)</label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="userReviewRating" id="rating4" value="4" required>
+                                <label class="form-check-label" for="4">4 (Good)</label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="userReviewRating" id="rating5" value="5" required>
+                                <label class="form-check-label" for="5">5 (Excellent)</label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="userReview">Your Review:</label>
+                            <textarea class="form-control" id="userReview" rows="3" required></textarea>
+                        </div>
+                       <div style="display: flex; ">
+                        <button type="submit" class="btn ms-auto btn-warning rounded-pill px-3 py-2 mt-2">Submit Review</button>
+                       </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 </div>
+
+
+<script>
+document.getElementById('reviewForm').addEventListener('submit', function (event) {
+    event.preventDefault();
+
+    const formData = {
+        rating: document.querySelector('input[name="userReviewRating"]:checked').value,
+        review: document.getElementById('userReview').value,
+        productId:"<%=product._id%>"
+    };
+
+    fetch('/user/addReview', {
+        method: 'POST',
+        headers: {
+            'Content-Type': 'application/json',
+        },
+        body: JSON.stringify(formData),
+    })
+    .then(response => response.json())
+    .then(data => {
+        if(data.added==="notABuyer"){
+            showAlert("You Are Not A Buyer To Add Review!")
+        }
+        else if(data.added===true){
+            document.getElementById('reviewForm').reset();
+            showSuccess("Review Posted")
+            window.location.reload()
+        }else if(data.added==="maximum"){
+            showAlert("Maximum Limit Over")
+        }else{
+            showAlert("Not Added")
+        }
+
+
+    })
+    .catch(error => {
+        // Handle errors
+        console.error('Error:', error);
+    });
+});
+</script>
 <script src="../../public/jsFiles/cart.js"></script>
 <%- include('../layout/footer')-%>
 <%- include('../layout/footerHTML')-%>
