--- a/views/user/homePage.ejs
+++ b/views/user/homePage.ejs
@@ -75,10 +75,19 @@
                 <div class="col">
                     <div class="card h-100">
                         <a href="/user/productDetailed?id=<%=product._id%>" style="text-decoration: none; color: black;">
-                        <img src="../../public/productImages/<%= product.images[0]%>" class="card-img-top" alt="...">
+                        <img src="../../public/productImages/<%= product.images[0]%>" class="card-img-top" alt="..." style="position: relative;">
+                        <%if(product?.discountPercentage>0){%>
+                            <span class="text-white" style="position: absolute; top: 10px; right: 10px; font-size: 15px; background-color:#CC0C39!important; border-radius: 10px; font-weight: bold; padding:8px ;"><%=product.discountPercentage%>% off</span>
+                            <%}%>
                         <div class="card-body d-flex justify-content-center" style="flex-direction: column; align-items: center; font-family: 'Michroma', sans-serif;">
                             <h5 class="card-title text-center mb-2"><%= product.name%></h5>
-                        <a href="/user/productDetailed?id=<%=product._id%>" class="btn btn-dark mt-2 rounded-pill"> &#x20B9 <%= product.price%></a>
+                        <a href="/user/productDetailed?id=<%=product._id%>" class="btn btn-dark mt-auto rounded-pill"><%if(product?.discountPercentage&&product?.discountPercentage>0){%>
+                            <span class="text-danger"> &#x20B9 <%= (product.price-((product?.price*product?.discountPercentage)/100)).toFixed(0)%></span>
+                           
+                        <%}else {%>
+                            &#x20B9 <%= product?.price%>
+                        <%}%>
+                        </a>
                     </div></a>
                 </div>
             </div>
